--- a/Server/WebAPI1/WebAPI1.csproj
+++ b/Server/WebAPI1/WebAPI1.csproj
@@ -4,7 +4,7 @@
         <TargetFramework>net8.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
-        <RootNamespace>WebApplication1</RootNamespace>
+        <RootNamespace>WebAPI</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
@@ -17,7 +17,6 @@
       <ProjectReference Include="..\..\Entities\Entities.csproj" />
       <ProjectReference Include="..\..\FileRepository\FileRepository.csproj" />
       <ProjectReference Include="..\..\RepositoryContracts\RepositoryContracts.csproj" />
-      <ProjectReference Include="..\EfcRepositories\EfcRepositories.csproj" />
     </ItemGroup>
 
 </Project>
